<resources>
    <string name="app_name">Simple Flashcards Plus</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>

    <string name="welcome">Welcome</string>
    <string name="ask_for_help">
        Hey there, I\'m Alex! I\'m always looking to make my work as awesome as possible
        for the community, so if you have any ideas on how to improve this app (bug fixes, feature requests, etc),
        please use the send feedback option in the settings to tell me! Thank you!
    </string>
    <string name="got_it">Got It</string>

    <string name="no_sets_at_all">
        Welcome to your library!
        To add flashcard sets, you can:
    </string>

    <string name="backup_your_data">Back Up Your Data!</string>
    <string name="backup_your_data_explanation">
        Simple Flashcards Plus can automatically back up your data, so
        you can save it to your Google Drive or export it to another device.
        Want to try it out? If you don\'t want to right now,
        you can find this feature in the settings menu.
    </string>
    <string name="backup_confirm">Yes, let\'s go!</string>
    <string name="backup_deny">I\'ll go there later</string>

    <string name="dark_mode_tutorial_title">Save Your Eyes (And Your Battery)</string>
    <string name="dark_mode_explanation">
        If you want to give Simple Flashcards Plus a darker color scheme, you can turn on dark mode.
        Want to try it now? If not, that\'s okay, you can turn it on or off at any time from the settings menu.
    </string>
    <string name="sure_lets_do_it">Sure, let\'s do it!</string>
    <string name="maybe_later">Maybe later</string>

    <string name="no_sets_search">You do not have any flashcard sets that match your search.</string>

    <string name="create_flashcard_set">Create Flashcard Set</string>
    <string name="flashcard_set_name">Flashcard set name</string>
    <string name="create">Create</string>

    <string name="please_rate">
        Hey, it looks like you\'re a frequent user of Simple Flashcards Plus!
        If you have a couple seconds, please rate this app in the Play Store.
        Every rating goes a long way towards motivating us to continue improving this app!
    </string>
    <string name="sure_will_help">Sure, I\'ll help</string>
    <string name="no_im_good">No, I\'m good</string>

    <string name="studying_best_done_in_groups">Studying Is Best Done In Groups!</string>
    <string name="please_share">
        If you have a friend who could use an awesome flashcards experience,
        please share Simple Flashcards with them.
        Our goal is to help as many people as possible with our work,
        which is why all of our apps are free and every new user puts a smile on our faces.
    </string>

    <string name="browse">Browse</string>
    <string name="quiz">Quiz</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <string name="search_icon">{ion-android-search}</string>
    <string name="clear_icon">{ion-android-close}</string>
    <string name="card_icon">{ion-card}</string>
    <string name="eye_icon">{ion-eye}</string>
    <string name="list_icon">{ion-android-list}</string>
    <string name="edit_icon">{ion-edit}</string>
    <string name="delete_icon">{ion-android-delete}</string>
    <string name="close_icon">{ion-android-close}</string>
    <string name="download_icon">{ion-android-download}</string>
    <string name="add_circle_icon">{ion-android-add-circle}</string>
    <string name="share_nearby_icon">{ion-arrow-swap}</string>
    <string name="microphone_icon">{ion-android-microphone}</string>
    <string name="settings_icon">{ion-android-settings}</string>
    <string name="home_icon">{ion-android-home}</string>
    <string name="home_folder_icon">{ion-android-folder}</string>

    <string name="download_sets_button_text">Download them from the Internet</string>
    <string name="get_from_nearby">Get them from nearby study buddies</string>
    <string name="create_your_own">Create your own</string>
    <string name="restore_them_from_backup">Restore them from a backup</string>

    <string name="flashcard_set_delete_title">Confirm Flashcard Set Deletion</string>
    <string name="flashcard_set_delete_message">
        Are you sure you want to delete your flashcard set %s?
    </string>
    <string name="no_flashcards_for_browsing">
        This flashcard set currently has no flashcards to browse.
        Use the edit button to add some!
    </string>
    <string name="not_enough_for_quiz">
        You need at least 2 flashcards in a set to take a quiz for it.
        Use the edit button to add more!
    </string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>

    <string name="image_load_fail">Failed to load image.</string>

    <string name="added_flashcard_sets">Added Flashcard Sets</string>

    <string name="speech_message">Tell us what you\'re searching for.</string>
    <string name="speech_not_supported">
        Sorry, but your Android device doesn\'t support speech recognition.
    </string>
    <string name="speech_unrecognized">
        We couldn\'t recognize what you said. Please try again.
    </string>

    <string name="add">Add</string>

    <string name="learned">Learned {ion-checkmark}</string>
    <string name="not_learned">Not learned</string>
</resources>
