<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="SpUsage, RtlHardcoded">

    <com.randomappsinc.simpleflashcards.theme.ThemedLinearLayout
        android:id="@+id/focus_sink"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <include
            android:id="@+id/search_bar"
            layout="@layout/search_bar"/>

        <LinearLayout
            android:id="@+id/no_sets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <com.randomappsinc.simpleflashcards.theme.ThemedTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/no_sets_at_all"
                android:textColor="@color/dark_gray"
                android:textSize="23sp"/>

            <com.randomappsinc.simpleflashcards.theme.ThemedCardView
                android:id="@+id/download_sets_button"
                android:layout_marginBottom="4dp"
                style="@style/no_sets_option_card">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <com.joanzapata.iconify.widget.IconTextView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:text="@string/download_icon"
                        android:textColor="@color/app_blue"
                        android:textSize="24dp"
                        android:gravity="center"/>

                    <com.randomappsinc.simpleflashcards.theme.ThemedTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:text="@string/download_sets_button_text"
                        android:textColor="@color/dark_gray"
                        android:textSize="17dp"/>
                </LinearLayout>
            </com.randomappsinc.simpleflashcards.theme.ThemedCardView>

            <com.randomappsinc.simpleflashcards.theme.ThemedCardView
                android:id="@+id/share_with_nearby_button"
                android:layout_marginBottom="4dp"
                style="@style/no_sets_option_card">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <com.joanzapata.iconify.widget.IconTextView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:text="@string/share_nearby_icon"
                        android:textColor="@color/app_blue"
                        android:textSize="24dp"
                        android:gravity="center"/>

                    <com.randomappsinc.simpleflashcards.theme.ThemedTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:text="@string/get_from_nearby"
                        android:textColor="@color/dark_gray"
                        android:textSize="17dp"/>
                </LinearLayout>
            </com.randomappsinc.simpleflashcards.theme.ThemedCardView>

            <com.randomappsinc.simpleflashcards.theme.ThemedCardView
                android:id="@+id/create_set_button"
                android:layout_marginBottom="4dp"
                style="@style/no_sets_option_card">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <com.joanzapata.iconify.widget.IconTextView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:text="@string/add_circle_icon"
                        android:textColor="@color/app_blue"
                        android:textSize="24dp"
                        android:gravity="center"/>

                    <com.randomappsinc.simpleflashcards.theme.ThemedTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:text="@string/create_your_own"
                        android:textColor="@color/dark_gray"
                        android:textSize="17dp"/>
                </LinearLayout>
            </com.randomappsinc.simpleflashcards.theme.ThemedCardView>

            <com.randomappsinc.simpleflashcards.theme.ThemedCardView
                android:id="@+id/restore_sets_button"
                style="@style/no_sets_option_card">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <com.joanzapata.iconify.widget.IconTextView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:text="@string/download_icon"
                        android:textColor="@color/app_blue"
                        android:textSize="24dp"
                        android:gravity="center"/>

                    <com.randomappsinc.simpleflashcards.theme.ThemedTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:text="@string/restore_them_from_backup"
                        android:textColor="@color/dark_gray"
                        android:textSize="17dp"/>
                </LinearLayout>
            </com.randomappsinc.simpleflashcards.theme.ThemedCardView>
        </LinearLayout>

        <com.randomappsinc.simpleflashcards.theme.ThemedTextView
            android:id="@+id/no_sets_match"
            android:text="@string/no_sets_search"
            style="@style/empty_state_text"/>

        <FrameLayout
            android:id="@+id/sets_list_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.randomappsinc.simpleflashcards.theme.ThemedRecyclerView
                android:id="@+id/flashcard_sets"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:paddingBottom="88dp"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager"/>

            <com.randomappsinc.simpleflashcards.theme.ThemedListFade
                android:layout_width="match_parent"
                android:layout_height="8dp"/>
        </FrameLayout>
    </com.randomappsinc.simpleflashcards.theme.ThemedLinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_flashcard_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"/>
</android.support.design.widget.CoordinatorLayout>
